--- a/BootCamp Philips FullStack Developer/Frontend/Projeto-Dinossauro/index.html
+++ b/BootCamp Philips FullStack Developer/Frontend/Projeto-Dinossauro/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DINO GAME JAVASCRIPT</title>
+    <link ref="stylesheet" href="css/styles.css"></link>
+    <script src="script.js" charset="UTF-8" defer></script>
 </head>
 <body>
-    
+    <div class="background"></div>
+    <div class="dino"></div>
 </body>
 </html>
